@@ -1,20 +1,0 @@
-Padre-Plugin-Kate
-
-Use a Perl port of the syntax highlight engine of the Kate editor in Padre.
-
-INSTALLATION
-
-To install this module, run the following commands:
-
-	perl Makefile.PL
-	make
-	make test
-	make install
-
-COPYRIGHT AND LICENCE
-
-Copyright (C) 2009 Gabor Szabo
-
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
-
