@@ -1,0 +1,13 @@
+name             = Padre-Plugin-Kate
+author           = Gabor Szabo L<http://szabgab.com/>
+license          = Perl_5
+version          = 0.13
+copyright_holder = Gabor Szabo
+
+[@PadrePlugin]
+
+homepage         = http://padre.perlide.org
+repository       = http://svn.perlide.org/padre/trunk/Padre-Plugin-Kate/
+
+[Preqs]
+Syntax::Highlight::Engine::Kate  = 0.05
