@@ -1,9 +1,0 @@
-use strict;
-use warnings;
-
-use Test::More;
-plan tests => 1;
-
-
-use_ok('Padre::Plugin::Kate');
-
