@@ -1,4 +1,9 @@
-    support for C# (CHORNY)
+Revision history for Padre-Plugin-Kate
+
+{{$NEXT}}
+    Added support for C# (CHORNY)
+    Switched to Dist::Zilla (AZAWAWI)
+    Added compatibility with the latest Padre (AZAWAWI)
 
 v0.04 2010.08.11
     make compatible to newer Padre versions (ZENOG)
